# pricing-core

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md
examples/: european_call_pricing.cpp
include/pricing/core/: exceptions.hpp  interfaces.hpp  types.hpp
include/pricing/math/: gaussian_rng.hpp  random.hpp
include/pricing/models/: black_scholes.hpp
include/pricing/montecarlo/: engine.hpp
include/pricing/numerical/: euler_scheme.hpp  scheme.hpp
include/pricing/payoff/: european_call.hpp  payoff.hpp
include/pricing/pricer/: montecarlo_pricer.hpp
include/pricing/stochastic/: dynamics.hpp  path.hpp  process.hpp
include/pricing/utils/: time.hpp
src/math/: gaussian_rng.cpp
src/models/: black_scholes.cpp
src/montecarlo/: engine.cpp
src/numerical/: euler_scheme.cpp
src/payoff/: european_call.cpp
src/pricer/: montecarlo_pricer.cpp
src/stochastic/: path.cpp
tests/: CMakeLists.txt  test_black_scholes.cpp  test_montecarlo_convergence.cpp  test_payoff.cpp
